# GeodVessel

./: .gitignore  README.md  example.py  pyproject.toml
CorSegRec/: README.md  check.py  config.py  main.py  pyproject.toml  requirements.txt  run_dpc.py  train_cfc.py
CorSegRec/dpc/: dpc_walk.py
CorSegRec/models/: cfc_model.py
CorSegRec/sampling/: build_features.py  sample_training_points.py
CorSegRec/utils/: geometry.py  neighborhood.py  patch.py
geodesic-vessels/src/geodesic_vessels/: extremities.py  main.py  metrics.py  reconstructions.py
geodesic-vessels/src/geodesic_vessels.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/geodesic_vessels/: __init__.py  extremities.py  helpers.py  hyperparameters.py  metrics.py  paths.py  reconstructions.py  utils.py
src/geodesic_vessels.egg-info/: PKG-INFO  SOURCES.txt
