[project]
name = "corsegrec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "kaleido>=1.3.0",
    "numpy>=2.4.6",
    "plotly>=6.8.0",
    "pynrrd>=1.1.3",
    "pyvista>=0.48.4",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]
